<resources>
    <string name="app_name">SoftechTest</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="how_are_you_doing">How are you feeling ?</string>
    <string name="upcoming_appointment">Up Coming Appointments</string>
    <string name="specialities">Specialities</string>
    <string name="doctors_available">Doctors Available</string>
    <string name="dental_surgery">Dental Surgery</string>
    <string name="cardiology">Cardiology</string>
    <string name="general">General</string>
</resources>